# wordle-player

./: LICENSE  README.md  wordle-solver.cabal
src/: Main.hs
