name:                wordle-solver
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tarpick/wordle-solver#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Pan
maintainer:          tarpick@hotmail.com
copyright:           Copyright (c) 2021 Patrick Pan
category:            Application
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wordle-solver
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , time
                     , transformers
